@@ -1,5 +1,7 @@
 10 August 2007
 
+* Combine append into write and exec into pipe even more to get rid of
+  deliver-append.c and deliver-exec.c.
 * add-from on stdout delivery is gone, an acceptable from line can be prepended
   using rewrite.
 
@@ -520,4 +522,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.137 2007-08-10 13:37:29 nicm Exp $
+$Id: CHANGES,v 1.138 2007-08-10 17:17:40 nicm Exp $
